mobile responsive updates

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "PUBG Portfolio",
-    "name": "PUBG Mobile E-Spor Portföyü",
+    "short_name": "Abem Site kurmus yav",
+    "name": "Abem Site kurmus yav",
     "icons": [
         {
             "src": "favicon.ico",
